2003-08-23 Vincent Isambart <isambart@netcourrier.com>

	* sample/simple.rb: Corrected a mistake in a comment
	* src/rbgdkglconfig.c, src/rbgtkwidget.c: corrected a little bug when
	using attrib lists and NUM2INT was replaced by rbgobj_get_{enum,flags}
	when we are waiting for an enum or flag

2003-08-21 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkglconfig.c, src/rbgtkglext.c: defined enum/flags classes
	and fixed version numbers
	* sample/simple.rb: added in a comment an other way to create a
	Gdk::GLConfig
	* src/rbgdkglconfig.c: added automatic conversion to and from booleans
	for some attributes values

2003-08-21 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgtkwidget.c, src/rbgdkwindow.c, src/rbgdkpixmap.c: Added
	* src/*.c: Classes in Gtk/Gdk::GL have been moved to Gtk/Gdk and
	renamed by adding a 'GL' prefix to their name. For example,
	Gdk::GL::Config became Gdk::GLConfig. Most Variables/functions were
	also renamed in the C code.
	* sample/*.rb: modified to follow changes

2003-08-20 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkglconfig.c, src/rbgtkglext.c: moved
	  GDK_TYPE_GL_CONFIG_MODE and GDK_TYPE_GL_CONFIG_ATTRIB
	  from Gdk::GL to Gdk::GL::Config and added GtkGLExt
	  version information and MULTIHEAD infos
	* src/rbgdkglpixmap.c, src/rbgtkglwindow.c:
	  added gl_drawable method
	* sample/*.rb: modified to follow changes

2003-08-16 Vincent Isambart <isambart@netcourrier.com>

	* ChangeLog, README, README.rbogl, rbogl.patch: Files added
	* src/lib/gtkglext.rb: require 'opengl' added
	* sample/*: removed require 'opengl' as it is now automatic
	* All files added to CVS - First import 8-)
	* sample/gtkglut.rb: Added

2003-08-16 Vincent Isambart <isambart@netcourrier.com>

	* Ruby/GtkGLExt 0.0.1 released
	* Ruby/GtkGLExt 0.0.2 released
	* Ruby/GtkGLExt 0.0.3 released

2003-08-15 Vincent Isambart <isambart@netcourrier.com>

	* Ruby/GtkGLExt 0.0.0 released