@@ -1,3 +1,8 @@
+2003-08-25 Vincent Isambart <isambart@netcourrier.com>
+
+	* src/rbgtkwidget.c: Added default parameters and a rgbobj_get_enum to
+	Gtk::Widget#create_gl_context
+
 2003-08-23 Vincent Isambart <isambart@netcourrier.com>
 
 	* sample/simple.rb: Corrected a mistake in a comment
